--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.7.9",
     "concurrently": "^6.5.1",
     "cors": "^2.8.5",
+    "framer-motion": "^12.16.0",
     "lucide-react": "^0.511.0",
     "nodemailer": "^6.9.16",
     "prop-types": "^15.8.1",
+    "react-calendar": "^6.0.0",
     "react-feather": "^2.0.10",
     "react-icons": "^5.4.0"
   }
